golden/error/parse_assert_no_comma.test
assert false
0

# output:
 --> stdin:2:0
  |
2 | 0
  | ^
Error: Expected ',' here between the assertion condition and message.
